added basic documentation to README.rd file